--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,38 @@
 // app global css in SCSS form
+
+// q-input fields
+.q-field__control,
+.q-field__control:before,
+.q-field__control:after {
+  content: none;
+  border: 1px solid $blue;
+}
+.q-field__control:focus-within,
+.q-field__control:focus-within:after {
+  content: none;
+  border: 1px solid $blue;
+  box-shadow: 0 0 10px $blue-1;
+}
+.q-field--outlined .q-field__control:hover,
+.q-field--outlined .q-field__control:hover:after {
+  border: 1px solid $blue;
+  box-shadow: 0 0 10px $blue-2;
+}
+
+.q-field--error .q-field__control,
+.q-field--error .q-field__control:before,
+.q-field--error .q-field__control:after {
+  content: none;
+  border: 1px solid $red-5;
+}
+.q-field--error .q-field__control:focus-within,
+.q-field--error .q-field__control:focus-within:after {
+  content: none;
+  border: 1px solid $red-5;
+  box-shadow: 0 0 10px $red-1;
+}
+.q-field--error .q-field__control:hover,
+.q-field--error .q-field__control:hover {
+  border: 1px solid $red-5;
+  box-shadow: 0 0 10px $red-2;
+}
